# deepfield-multimodal

./: .dockerignore  .gitignore  CLAUDE.md  Containerfile  README.md  TODO.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
agnosticv/: common.yaml  description.adoc
app/: benchmark.py  db.py  main.py
app/agent_loop/: actions.py  learning.py  loop.py  verification.py
app/analysis/: evaluator.py
app/api/: agent_loop.py  baseline.py  benchmark.py  bootstrap.py  classification.py  demo.py  multimodal.py  sse.py
app/baseline/: compiler.py  profiles.py  sources.py
app/bootstrap/: config_generator.py  config_loader.py  constraints.py  profiles.py  promotion.py  rule_engine.py  scenarios.py  semantic_classifier.py
app/classification/: cascade.py  engine.py  registry.py  taxonomy.py
app/connectors/: base.py  file.py  kubernetes.py  prometheus.py
app/domain/: models.py
app/inference/: client.py
app/macroagents/: action_planner.py  incident_timeline.py  learning_proposal_agent.py  root_cause_hypothesis.py  verification_planner.py
app/microagents/: audio_classifier.py  base.py  configurable.py  document_classifier.py  embedding_classifier.py  image_classifier.py  registry.py  text_classifier.py
app/multimodal/: feature_extractors.py  ingestion.py  media_adapter.py  normalizer.py  storage.py
app/nanoagents/: audio_energy.py  baseline_distance.py  (+6 more)
deploy/: deployment.yaml  verify.sh
docs/: antora.yml
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
migrations/: 001_initial_schema.sql
(+63 files in other folders)
