[project]
name = "deepfield-multimodal"
version = "0.1.0"
description = "Multimodal agent pack for enterprise signal classification and action loops"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
db = ["asyncpg>=0.29"]
media = [
    "numpy>=1.26",
    "onnxruntime>=1.18",
    "pillow>=10.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
asyncio_mode = "auto"
